# electronics-shop-project

./: pyproject.toml
homework-2/: main.py
homework-6/: main.py
src/: exception.py  item.py  keyboard.py  phone.py
tests/: test_item.py
