[tool.poetry]
name = "electronics-shop-project"
version = "0.1.0"
description = ""
authors = ["alexeylitvinov <alextwin1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
